# ShadowPAL

./: Cargo.toml  Readme.md  shadowpal.db
src/: character.rs  dice.rs  main.rs
src/ui/: character.ui  main.ui
