[package]
name = "shadowpal"
version = "0.1.0"
authors = ["Brett Lajzer <brett@brettlajzer.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "^0.7.0"
ron = "^0.5.1"

[dependencies.gtk]
version = "^0.8.0"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]

[dependencies.serde]
version = "1.0.99"
features = ["rc"]